fIX modal winows z-index

--- a/style.css
+++ b/style.css
@@ -586,6 +586,7 @@ input[type=range]::-moz-range-thumb:active {
 /* Thumb (WebKit) */
 .range-container input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
+  margin-top: -9px;
   width: 24px;
   height: 24px;
   background-color: var(--slider-thumb-color, #007bff);
@@ -726,7 +727,12 @@ input[type=range]::-moz-range-thumb:active {
   
 
     .modal-backdrop {
-      --bs-backdrop-zindex: 1029 !important;
+      --bs-backdrop-zindex: 1040 !important;
+      z-index: 1040 !important;
+    }
+    .modal {
+      --bs-modal-zindex: 1050 !important;
+      z-index: 1050 !important;
     }
     
 
